# admin-urwid

./: README.md  pyproject.toml  requirements.txt
src/vtui/: __main__.py  df.py  vms.py
